style: color contrast fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,13 @@
         @apply scroll-smooth;
     }
     h1 {
-        @apply text-2xl sm:text-5xl font-bold text-neutral-900 dark:text-neutral-100
+        @apply text-2xl sm:text-5xl font-bold text-neutral-900 dark:text-neutral-50
     }
     h2 {
-        @apply text-xl sm:text-4xl font-bold text-neutral-900 dark:text-neutral-100
+        @apply text-xl sm:text-4xl font-bold text-neutral-900 dark:text-neutral-50
     }
     h3 {
-        @apply text-lg sm:text-2xl font-bold text-neutral-900 dark:text-neutral-100
+        @apply text-lg sm:text-2xl font-bold text-neutral-900 dark:text-neutral-50
     }
     body, div {
         @apply text-sm sm:text-base text-neutral-700 dark:text-neutral-300 
@@ -24,7 +24,7 @@
 
 @layer components {
     .btn-primary {
-        @apply inline-block px-6 py-2.5 bg-lime-500 dark:text-neutral-900 text-white font-semibold text-xs leading-tight uppercase rounded-full shadow-md dark:shadow-lime-700 hover:scale-[1.02] hover:shadow-lg transition duration-150 ease-in-out;
+        @apply inline-block px-6 py-2.5 bg-gradient-to-br from-lime-500 via-lime-500 to-green-500 dark:text-neutral-900 text-white tracking-widest font-bold text-xs leading-tight uppercase rounded-full shadow-md dark:shadow-lime-700 hover:scale-[1.02] hover:shadow-lg transition duration-150 ease-in-out;
     }
 
     .btn-secondary {
@@ -40,7 +40,7 @@
     }
 
     .content {
-        @apply wysiwyg lg:wysiwyg-lg dark:wysiwyg-dark wysiwyg-a:text-lime-500 dark:wysiwyg-a:text-lime-500 wysiwyg-a:no-underline hover:wysiwyg-a:underline wysiwyg-video:mx-auto wysiwyg-video:border wysiwyg-video:border-4 wysiwyg-video:border-lime-500 wysiwyg-img:mx-auto;
+        @apply wysiwyg lg:wysiwyg-lg dark:wysiwyg-dark hover:wysiwyg-a:!text-lime-500 wysiwyg-a:font-medium wysiwyg-a:underline-offset-2 wysiwyg-video:mx-auto wysiwyg-video:border wysiwyg-video:border-4 wysiwyg-video:border-lime-500 wysiwyg-img:mx-auto;
     }
 
     .circle {
@@ -48,7 +48,7 @@
     }
 
     .card {
-        @apply w-full px-4 pb-6 bg-white/70 shadow-md hover:shadow-lg hover:scale-[1.02] transition-transform duration-300 ease-in-out dark:bg-black/30 dark:shadow-lime-700
+        @apply w-full px-4 pb-6 bg-white/50 shadow-md hover:shadow-lg hover:scale-[1.02] transition-transform duration-300 ease-in-out dark:bg-black/30 dark:shadow-lime-700
     }
 }
 
